<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#868686"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgSimple"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnLoadSimple"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple" />


        <Button
            android:id="@+id/btnFeature1"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resized"

            />


        <Button
            android:id="@+id/btnFeature2"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cropped"

            />


        <Button
            android:id="@+id/btnFeature3"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/circular" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFeature4"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blur"

            />

        <Button
            android:id="@+id/btnFeature5"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/multi_edit" />


        <Button
            android:id="@+id/btnFeature6"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_filter"

            />


        <Button
            android:id="@+id/btnFeature7"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sepia" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFeature8"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="contrast" />

        <Button
            android:id="@+id/btnFeature9"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="invert" />

        <Button
            android:id="@+id/btnFeature10"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="rounded corners" />

        <Button
            android:id="@+id/btnFeature11"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Swirl" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnFeature12"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Toon" />

        <Button
            android:id="@+id/btnFeature13"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Pixel" />

        <Button
            android:id="@+id/btnFeature14"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sketch" />

        <Button
            android:id="@+id/btnFeature15"
            style="@style/btnStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Star mask" />

    </LinearLayout>


</LinearLayout>